--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "style-loader": "^0.19.0",
     "svg-url-loader": "^2.3.0",
     "ts-loader": "^3.5.0",
+    "typescript": "^3.2.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
   },
